--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^4.5.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
